--- a/app/invoicecreation/webapp/view/ASNReportDetail.view.xml
+++ b/app/invoicecreation/webapp/view/ASNReportDetail.view.xml
@@ -111,7 +111,8 @@
                 headerText="Item Details"
                 expandable="true"
                 expanded="true"
-            >
+				visible ="{= ${detailModel>/DocumentRows/results/0/InvoiceStatus} === 'PENDING FOR VOUCHER GENERATION'}"
+				>
 				<ScrollContainer horizontal="true" height="65%">
 					<Table id="TableDataId" itemPress="onItempress" items="{detailModel>/DocumentRows/results}" mode="SingleSelectMaster"
 						sticky="ColumnHeaders">
@@ -191,7 +192,7 @@
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
 								<Text text="SGST Amt ({detailModel>/DocumentRows/results/0/CurrencyCode})"/>
 							</Column>
-							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
+							<!-- <Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
 								<Text text="CDT"/>
 							</Column>
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
@@ -199,7 +200,7 @@
 							</Column>
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
 								<Text text="TCS %"/>
-							</Column>
+							</Column> -->
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
 								<Text text="Exchange Rate ({detailModel>/DocumentRows/results/0/CurrencyCode})"/>
 							</Column>
@@ -239,6 +240,9 @@
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
 								<Text text=" Total Invoice Amount ({detailModel>/DocumentRows/results/0/CurrencyCode})"/>
 							</Column>
+							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
+								<Text text="Remarks"/>
+							</Column> 
 							<!-- <Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
 								<Text text="Actual Tax Amount ({detailModel>/DocumentRows/results/0/CurrencyCode})"/>
 							</Column> -->
@@ -280,9 +284,9 @@
 									<Text text="{path:'detailModel>IGA',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
 									<Text text="{path:'detailModel>CGA',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
 									<Text text="{path:'detailModel>SGA',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
-									<Input value="{detailModel>CDT}" enabled ="{= ${detailModel>/DocumentRows/results/0/InvoiceStatus} === 'PENDING FOR BILL PASSING'}" change="onCDTChange"/>
+									<!-- <Input value="{detailModel>CDT}" enabled ="{= ${detailModel>/DocumentRows/results/0/InvoiceStatus} === 'PENDING FOR BILL PASSING'}" change="onCDTChange"/>
 									<Input value="{detailModel>CRT}" enabled ="{= ${detailModel>/DocumentRows/results/0/InvoiceStatus} === 'PENDING FOR BILL PASSING'}" change="onCRTChange"/>
-									<Input value="{detailModel>TCS}" enabled ="{= ${detailModel>/DocumentRows/results/0/InvoiceStatus} === 'PENDING FOR BILL PASSING'}" change="onTCSChange"/>
+									<Input value="{detailModel>TCS}" enabled ="{= ${detailModel>/DocumentRows/results/0/InvoiceStatus} === 'PENDING FOR BILL PASSING'}" change="onTCSChange"/> -->
 									<Input value="{path:'detailModel>ExchangeRate',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}" enabled ="{= ${detailModel>/DocumentRows/results/0/InvoiceStatus} === 'PENDING FOR BILL PASSING'}" change="onExchRateChange"/>
 									<Text text="{detailModel>FRMyear}" visible="false"/>
 									<!-- <Text text="{path:'detailModel>InvoiceRate',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
@@ -296,6 +300,7 @@
 									<Input value="{path:'detailModel>Packing',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}" enabled ="{= ${detailModel>/DocumentRows/results/0/InvoiceStatus} === 'PENDING FOR BILL PASSING'}" change="onPackChange"/>
 									<Input value="{path:'detailModel>ActualItemRate',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}" enabled ="{= ${detailModel>/DocumentRows/results/0/InvoiceStatus} === 'PENDING FOR BILL PASSING'}" change="onRateChange"/>
 									<Input value="{path:'detailModel>MRNLineValue',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}" enabled ="{= ${detailModel>/DocumentRows/results/0/InvoiceStatus} === 'PENDING FOR BILL PASSING'}" change="onTotalChange"/>
+									<Input value="{detailModel>Remarks}" enabled ="{= ${detailModel>/DocumentRows/results/0/InvoiceStatus} === 'PENDING FOR BILL PASSING'}" change="onRemarksChange"/>
 									<!-- <Input value="{path:'detailModel>ActualTaxAmount',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}" enabled ="{= ${detailModel>/DocumentRows/results/0/InvoiceStatus} === 'PENDING FOR BILL PASSING'}" change="onTaxAmtChange"/> -->
 									<!-- <Input value="{path:'detailModel>ActualOtherCharges',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
 									<Input value="{path:'detailModel>ActualFrieghtAmount',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
